Add progress to GetReviews and fix CORS
